kubernates/store-rest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-rest-deployment
spec:
  selector:
    matchLabels:
      applicationFullName: store-rest
      application: rest
  template:
    metadata:
      labels:
        applicationFullName: store-rest
        application: rest
    spec:
      containers:
        - name: store-rest
          image: kirbel74/rest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "100Mi"
              cpu: "500m"
