kubernates/store-thing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-thing-deployment
spec:
  selector:
    matchLabels:
      applicationFullName: store-thing
      application: thing
  template:
    metadata:
      labels:
        applicationFullName: store-thing
        application: thing
    spec:
      containers:
        - name: store-thing
          image: kirbel74/thing
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8081
          resources:
            limits:
              memory: "100Mi"
              cpu: "500m"
