kubernates/store-user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-user-deployment
spec:
  selector:
    matchLabels:
      applicationFullName: store-user
      application: user
  template:
    metadata:
      labels:
        applicationFullName: store-user
        application: user
    spec:
      containers:
        - name: store-user
          image: kirbel74/user
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8083
          resources:
            limits:
              memory: "100Mi"
              cpu: "500m"
