kubernates/store-rest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: store-rest-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
  selector:
    applicationFullName: store-rest
