kubernates/store-user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: store-user-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      protocol: TCP
  selector:
    applicationFullName: store-user
