kubernates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    ngix.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: store.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: store-rest-service
                port:
                  number: 80
